Wed Jan  7 11:58:40 EST 2004	nsc <Nicholas_Castellano@acml.com>
	* src/tds/unittests/convert.c:
	- Avoid assignments involving potentially bogus floating point
	  values, which might trigger SIGFPE.  Remove yesterday's
	  hack to ignore SIGFPE.
	* src/tds/convert.c:
	- Fix conversions from TDS_INT8 to TDS_NUMERIC and TDS_DECIMAL on
	  Tru64.

Wed Jan  7 09:57:30 EST 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in new candidate 0.62rc4
	
Wed Jan 07 11:35:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc_util.c: fix results of SQL_DESC_TYPE_NAME

Tue Jan  6 20:28:21 EST 2004	nsc <Nicholas_Castellano@acml.com>
	* src/tds/unittests/convert.c:
	- Ensure that SIGFPE is ignored so that the convert unit test
	  isn't killed by an attempt to convert a bogus FP number.

Tue Jan  6 20:13:21 EST 2004	nsc <Nicholas_Castellano@acml.com>
	* src/tds/unittests/convert.c:
	- Don't divide by zero if test takes less than a millisecond.
	
Tue Jan 06 10:29:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* include/cspublic.h: fix for C++ compile

Mon Jan  5 21:35:58 EST 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in new candidate 0.62rc3
	* src/dblib/bcp.c
	- Applied ML patch from Christos.  Added/fixed other comments.

Mon Jan  5 17:19:54 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/api_status.txt SQLFetchScroll is not OK.  

Mon Jan  5 10:09:30 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/index.html doc/htdoc/news.html
	- small repairs

Mon Jan  5 00:45:00 EST 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in set to 0.62rc2
	* doc/htdoc/index.html doc/htdoc/news.html
	- announce 0.62 release candidate availability
	* src/dblib/bcp.c src/tds/write.c
	- completed patch from Christos for native bcp null handling

Sat Jan 03 20:31:52 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* vms/config_h.vms vms/configure.com vms/descrip_mms.template:
	- applied Craig A. Berry patch for VMS
