@@ -1,3 +1,8 @@
+Wed Jan  7 13:03:38 EST 2004	nsc <Nicholas_Castellano@acml.com>
+	* src/ctlib/unittests/common.c:
+	- Force default date format so we can meaningfully compare
+	  produced dates to expected values in unit tests.
+
 Wed Jan  7 11:58:40 EST 2004	nsc <Nicholas_Castellano@acml.com>
 	* src/tds/unittests/convert.c:
 	- Avoid assignments involving potentially bogus floating point
